--- a/src/app/components/place/place.component.html
+++ b/src/app/components/place/place.component.html
@@ -23,6 +23,7 @@
       <h1 class="card-title">{{place.placeName |uppercase }} </h1>
       <p class="card-text">{{place?.description}}</p>
       <button  type="button" routerLink="placedetail/{{place.placeId}}" class="btn btn-info"> Detaylar</button>
+      <p style="float:right; color:red ;"><b>Açık</b> </p>
     </div>
     </div>
   </div>
