--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -33,8 +33,8 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="bar-chart-2" class="align-text-bottom"></span>
+                <a class="nav-link" routerLink="comments">
+                  <span data-feather="bar-chart-2"  class="align-text-bottom"></span>
                   Yorumlar
                 </a>
               </li>
