--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -41,7 +41,7 @@
   </div>
 </form>
 <div class="card-footer" class="d-grid gap-2">
-  <button type="button" class="btn btn-primary btn-lg" (click)="add()">Yorum Yap</button>
+  <button type="button" class="btn btn-info btn-lg" (click)="add()">Yorum Yap</button>
   
 </div>
 
