--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,32 +4,33 @@
       <form [formGroup]="registerForm">
         <!-- <img class="mb-4" src="..." alt="" width="72" height="57"> -->
         <h1 class="h3 mb-3 fw-normal">Kayıt Ol</h1>
-    
         <div class="form-floating">
             <input formControlName="firstName" type="text" class="form-control" id="floatingInput" placeholder="İsim">
             <label for="floatingInput">İsim</label>
           </div>
-
-          <div class="form-floating">
+          <div style="margin-top:3%"  class="form-floating">
             <input formControlName="lastName" type="text" class="form-control" id="floatingInput" placeholder="Soyisim">
             <label for="floatingInput">Soyisim</label>
           </div>
-        <div class="form-floating">
+        <div style="margin-top:3%"  class="form-floating">
           <input formControlName="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
           <label for="floatingInput">E-Posta</label>
         </div>
-        <div class="form-floating">
-          <input formControlName="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <div style="margin-top:3%"  class="form-floating">
+          <input formControlName="password" type="password" class="form-control" id="floatingPassword" aria-describedby="passwordHelpInline" placeholder="Password">
           <label for="floatingPassword">Parola</label>
+          <div class="col-auto">
+            <span id="passwordHelpInline" class="form-text">
+              Must be 8-20 characters long.
+            </span>
+          </div>
         </div>
     
         <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Beni Hatırla
-          </label>
+   
         </div>
         <button class="w-100 btn btn-lg btn-primary" (click)="register()">Kayıt Ol</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
+        <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
       </form>
     </main>
     
